# PY_DOS

./: .gitignore  MANIIFEST.in  README.md  devlogs.gitignore  main.py  pomodoro.py  pydos_file_contents.json  pydos_filesystem.json  pyproject.toml  requirements.txt  setup.py  utils.py  utls.py
Py_DOS_B1.egg-info/: PKG-INFO  SOURCES.txt
src/pydos/: __init__.py  __main__.py  core.py  display.py  utils.py
src/pydos/appdata/: lynx.py  rubus_engine.py
src/pydos/appdata/lantern/: setup.py
src/pydos/appdata/mutiny/: community.py  setup.py
src/pydos/fs/: __init__.py  kernel.py  persistence.py  vfs_ops.py
src/pydos/shell/: __init__.py  builtins.py  pipeline.py
src/pydos/system/: __init__.py  auth.py  clock.py  sysinfo.py
